Add product previews and dynamic categories
